--- a/assets/css/components/reset.styl
+++ b/assets/css/components/reset.styl
@@ -2,6 +2,7 @@
     box-sizing border-box
     list-style-type none
     font-size 100%
-    links="a, a:hover"
-    {links}
+    a, a:hover
         text-decoration none
+    footer, header, main, section 
+        display flex   
