--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -1,1 +1,5 @@
+@import "./components/vars.styl";
 @import "./components/reset.styl";
+@import "./components/header.styl"; 
+@import "./components/navbar.styl";    
+@import "./components/sections.styl";     
