--- a/assets/css/components/reset.styl
+++ b/assets/css/components/reset.styl
@@ -1,8 +1,17 @@
 * 
     box-sizing border-box
+    line-height 1.1
     list-style-type none
     font-size 100%
+    margin 0
+    padding 0
     a, a:hover
         text-decoration none
-    footer, header, main, section 
-        display flex   
+    .header_top .container_fluid, .navbar
+        display flex
+        @media(min-width: desktop)          
+            flex-direction row 
+    audio, img, footer, video, iframe
+        display inline-block
+        width 100%     
+            
