--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,15 +1,99 @@
 * {
   box-sizing: border-box;
+  line-height: 1.1;
   list-style-type: none;
   font-size: 100%;
+  margin: 0;
+  padding: 0;
 }
 * a,
 * a:hover {
   text-decoration: none;
 }
-* footer,
-* header,
-* main,
-* section {
+* .header_top .container_fluid,
+* .navbar {
   display: flex;
+}
+@media (min-width: 48em) {
+  * .header_top .container_fluid,
+  * .navbar {
+    flex-direction: row;
+  }
+}
+* audio,
+* img,
+* footer,
+* video,
+* iframe {
+  display: inline-block;
+  width: 100%;
+}
+.header_top {
+  background-color: #fff;
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
+  padding: 1em;
+  position: fixed;
+  width: 100%;
+}
+.header_top .container_fluid {
+  margin: 0 auto;
+  width: 80%;
+}
+.header_top .logo {
+  width: 40%;
+}
+.header_top .logo h2 {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 1.8em;
+  font-weight: 700;
+}
+.header_top .responsive {
+  display: block;
+}
+.header_top .links a {
+  color: #333;
+  display: block;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 0.6em 1em 0em 1em;
+}
+@media (min-width: 48em) {
+  .header_top .container_fluid {
+    position: relative;
+    width: 50%;
+  }
+  .header_top .container_fluid .responsive {
+    display: none;
+  }
+  .header_top .container_fluid .links {
+    position: absolute;
+    right: 1em;
+    width: 40%;
+  }
+  .header_top .container_fluid .links a {
+    display: inline-block;
+  }
+}
+.navbar {
+  background-color: #fff;
+  width: 100%;
+}
+@media (min-width: 48em) {
+  .navbar {
+    min-height: 100vh;
+    width: 20%;
+  }
+}
+.main .banner {
+  background: #8360c3 /* fallback for old browsers */;
+  background: -webkit-linear-gradient(to right, #2ebf91, #8360c3) /* Chrome 10-25, Safari 5.1-6 */;
+  background: linear-gradient(to right, #2ebf91, #8360c3) /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */;
+}
+.main .banner .top {
+  padding: 4em 0;
+}
+.main .banner .top h1,
+.main .banner .top h2 {
+  color: #fff;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  text-transform: uppercase;
 }
