--- a/assets/css/components/reset.styl
+++ b/assets/css/components/reset.styl
@@ -7,10 +7,8 @@
     padding 0
     a, a:hover
         text-decoration none
-    .header_top .container_fluid, .navbar
-        display flex
-        @media(min-width: desktop)          
-            flex-direction row 
+    .header_top .container_fluid, .contents, .navbar 
+        display flex           
     audio, img, footer, video, iframe
         display inline-block
         width 100%     
