--- a/assets/css/components/sections.styl
+++ b/assets/css/components/sections.styl
@@ -1,4 +1,6 @@
 .main
+    .contents 
+        width 100%
     .banner
         background #8360c3  /* fallback for old browsers */
         background -webkit-linear-gradient(to right, #2ebf91, #8360c3)  /* Chrome 10-25, Safari 5.1-6 */
@@ -9,3 +11,5 @@
                 color #fff 
                 font-family roboto 
                 text-transform uppercase
+        @media(min-width: desktop)
+            min-height 30em        
