--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,14 +11,9 @@
   text-decoration: none;
 }
 * .header_top .container_fluid,
+* .contents,
 * .navbar {
   display: flex;
-}
-@media (min-width: 48em) {
-  * .header_top .container_fluid,
-  * .navbar {
-    flex-direction: row;
-  }
 }
 * audio,
 * img,
@@ -27,6 +22,11 @@
 * iframe {
   display: inline-block;
   width: 100%;
+}
+@media (min-width: 48em) {
+  .container .col-12 {
+    width: 100%;
+  }
 }
 .header_top {
   background-color: #fff;
@@ -83,6 +83,9 @@
     width: 20%;
   }
 }
+.main .contents {
+  width: 100%;
+}
 .main .banner {
   background: #8360c3 /* fallback for old browsers */;
   background: -webkit-linear-gradient(to right, #2ebf91, #8360c3) /* Chrome 10-25, Safari 5.1-6 */;
@@ -96,4 +99,9 @@
   color: #fff;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   text-transform: uppercase;
+}
+@media (min-width: 48em) {
+  .main .banner {
+    min-height: 30em;
+  }
 }
