--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -1,5 +1,6 @@
 @import "./components/vars.styl";
 @import "./components/reset.styl";
+@import "./components/grids.styl";
 @import "./components/header.styl"; 
 @import "./components/navbar.styl";    
 @import "./components/sections.styl";     
