--- a/assets/css/components/navbar.styl
+++ b/assets/css/components/navbar.styl
@@ -1,6 +1,20 @@
 .navbar
     background-color #fff
+    box-shadow fast-shadow
     width 100%
+    .links
+        a
+          color #222 
+          display block
+          font-family roboto
+          font-size 0.9em
+          margin 1em
+          padding 0.3em 0.8em   
     @media(min-width: desktop)
         min-height 100vh
         width 20%
+        .links 
+            overflow-y scroll
+            position fixed
+        
+            
