--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,10 +10,20 @@
 * a:hover {
   text-decoration: none;
 }
+* body {
+  overflow: hidden;
+}
 * .header_top .container_fluid,
 * .contents,
+* .main,
 * .navbar {
   display: flex;
+}
+@media (min-width: 48em) {
+  * .header_top .container_fluid,
+  * .main {
+    flex-direction: row;
+  }
 }
 * audio,
 * img,
@@ -22,6 +32,38 @@
 * iframe {
   display: inline-block;
   width: 100%;
+}
+.card {
+  padding: 1em;
+}
+.card .card-header h2 {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+@media (min-width: 48em) {
+  .card {
+    margin: 0 auto;
+    width: 80%;
+  }
+  .card .card-body {
+    margin: 0.5em 0 0.5em 0;
+  }
+  .card .card-header h2 {
+    font-size: 2em;
+  }
+  .card .card-body {
+    min-width: 80%;
+    max-width: 90%;
+  }
+  .card .card-body img {
+    width: 90%;
+  }
+  .card .card-body .text {
+    margin-top: 0.9em;
+    width: 88%;
+  }
+  .card .card-body .text p {
+    font-size: 1.3em;
+  }
 }
 @media (min-width: 48em) {
   .container .col-12 {
@@ -57,17 +99,20 @@
   padding: 0.6em 1em 0em 1em;
 }
 @media (min-width: 48em) {
+  .header_top {
+    width: 80%;
+  }
   .header_top .container_fluid {
     position: relative;
-    width: 50%;
+    width: 80%;
   }
   .header_top .container_fluid .responsive {
     display: none;
   }
   .header_top .container_fluid .links {
     position: absolute;
-    right: 1em;
-    width: 40%;
+    right: 0.2em;
+    width: 30%;
   }
   .header_top .container_fluid .links a {
     display: inline-block;
@@ -75,33 +120,84 @@
 }
 .navbar {
   background-color: #fff;
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
   width: 100%;
+}
+.navbar .links a {
+  color: #222;
+  display: block;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 0.9em;
+  margin: 1em;
+  padding: 0.3em 0.8em;
 }
 @media (min-width: 48em) {
   .navbar {
     min-height: 100vh;
     width: 20%;
   }
+  .navbar .links {
+    overflow-y: scroll;
+    position: fixed;
+  }
+}
+.main {
+  background-color: #eee;
+  flex-direction: row-reverse;
 }
 .main .contents {
+  flex-direction: column;
   width: 100%;
 }
-.main .banner {
+@media (min-width: 48em) {
+  .main .contents {
+    width: 80%;
+  }
+  .main .contents .o-css {
+    background-color: #fff;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
+    margin: 1em auto;
+    width: 80%;
+  }
+}
+.main .contents .banner {
   background: #8360c3 /* fallback for old browsers */;
   background: -webkit-linear-gradient(to right, #2ebf91, #8360c3) /* Chrome 10-25, Safari 5.1-6 */;
   background: linear-gradient(to right, #2ebf91, #8360c3) /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */;
 }
-.main .banner .top {
-  padding: 4em 0;
+.main .contents .banner .container {
+  padding: 4em;
 }
-.main .banner .top h1,
-.main .banner .top h2 {
+.main .contents .banner .container h1,
+.main .contents .banner .container h2 {
   color: #fff;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  text-align: center;
   text-transform: uppercase;
 }
+.main .contents .banner .container h1 {
+  font-size: 4em;
+}
+.main .contents .banner .container h2 {
+  font-size: 1.8em;
+}
 @media (min-width: 48em) {
-  .main .banner {
-    min-height: 30em;
+  .main .contents .banner {
+    min-height: 20em;
   }
+  .main .contents .banner .container {
+    padding: 8em 0;
+  }
+}
+.footer {
+  background-color: #333;
+}
+.footer .container {
+  padding: 1em 0;
+}
+.footer .container p {
+  color: #eee;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 1em;
+  text-align: center;
 }
