--- a/assets/css/components/sections.styl
+++ b/assets/css/components/sections.styl
@@ -6,11 +6,11 @@
         width 100%
         @media(min-width: desktop)            
             width 80%
-            .o-css
+            .o-css, .pare-pense
                 background-color #fff
                 box-shadow fast-shadow
                 margin 1em auto
-                width 80%     
+                width 90%     
         .banner
             background #8360c3  /* fallback for old browsers */
             background -webkit-linear-gradient(to right, #2ebf91, #8360c3)  /* Chrome 10-25, Safari 5.1-6 */
