--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -149,11 +149,12 @@
   .main .contents {
     width: 80%;
   }
-  .main .contents .o-css {
+  .main .contents .o-css,
+  .main .contents .pare-pense {
     background-color: #fff;
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
     margin: 1em auto;
-    width: 80%;
+    width: 90%;
   }
 }
 .main .contents .banner {
