--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,7 +33,8 @@
 .card {
   padding: 1em;
 }
-.card .card-header h2 {
+.card .card-header h2,
+.card .card-header h3 {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 @media (min-width: 48em) {
