Versão já com editor

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -63,6 +63,83 @@
     font-size: 1.3em;
   }
 }
+.code {
+  display: block;
+  max-height: 500px;
+  width: 100%;
+  margin: 20px 0;
+  font-family: monospace;
+  font-size: 13px;
+  line-height: 23px;
+  position: relative;
+  overflow: auto;
+}
+.code .numbers {
+  padding: 10px;
+  text-align: right;
+}
+.code .source {
+  padding: 10px 0;
+}
+.code .source .line {
+  padding: 0 10px;
+}
+.code .source .line:nth-child(2n),
+.code .source .line .comment {
+  font-style: italic;
+}
+.code .copy {
+  position: absolute;
+  right: 10px;
+  top: 5px;
+  font-size: 12px;
+  text-decoration: underline;
+  cursor: pointer;
+}
+.code .numbers,
+.code .source {
+  float: left;
+}
+.code-style-light {
+  color: #444;
+  background: #f5f5f5;
+}
+.code-style-light .numbers {
+  color: #999;
+  background: #fff;
+}
+.code-style-light .source .line:nth-child(2n) {
+  background: #f2f2f2;
+}
+.code-style-light .source .comment {
+  color: #3fab46;
+}
+.code-style-light .source .c-pppvaovcsn {
+  color: #e05366;
+}
+.code-style-light .source .c-iescbrnu {
+  color: #6593e0;
+}
+.code-style-dark {
+  color: #e6e6e6;
+  background: #333;
+}
+.code-style-dark .numbers {
+  color: #999;
+  background: #fff;
+}
+.code-style-dark .source .line:nth-child(2n) {
+  background: #363636;
+}
+.code-style-dark .source .comment {
+  color: #588a5b;
+}
+.code-style-dark .source .sharp-keywords {
+  color: #df5d6e;
+}
+.code-style-dark .source .sharp-default-types {
+  color: #718dbd;
+}
 @media (min-width: 48em) {
   .container .col-12 {
     width: 100%;
