--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -1,6 +1,7 @@
 @import "./components/vars.styl";
 @import "./components/reset.styl";
 @import "./components/cards.styl";
+@import "./components/editor.styl";    
 @import "./components/grids.styl";
 @import "./components/header.styl"; 
 @import "./components/navbar.styl";    
