Segundo commit com editor

--- a/assets/css/components/sections.styl
+++ b/assets/css/components/sections.styl
@@ -6,17 +6,17 @@
         width 100%
         @media(min-width: desktop)            
             width 80%
-            .o-css, .pare-pense
+            .background-content
                 background-color #fff
                 box-shadow fast-shadow
-                margin 1em auto
+                margin 2em auto
                 width 90%     
         .banner
             background #8360c3  /* fallback for old browsers */
             background -webkit-linear-gradient(to right, #2ebf91, #8360c3)  /* Chrome 10-25, Safari 5.1-6 */
             background linear-gradient(to right, #2ebf91, #8360c3) /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
             .container
-                padding 4em
+                padding 4em 0
                 h1, h2 
                     color #fff 
                     font-family roboto 
