--- a/assets/css/components/cards.styl
+++ b/assets/css/components/cards.styl
@@ -1,7 +1,6 @@
 .card    
     padding 1em 
-    .card-header
-        h2, h3
+    .card-header h2, .card-body h3        
             font-family roboto 
     @media(min-width: desktop)
         margin 0 auto 
