--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,7 +34,7 @@
   padding: 1em;
 }
 .card .card-header h2,
-.card .card-header h3 {
+.card .card-body h3 {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 @media (min-width: 48em) {
@@ -227,11 +227,10 @@
   .main .contents {
     width: 80%;
   }
-  .main .contents .o-css,
-  .main .contents .pare-pense {
+  .main .contents .background-content {
     background-color: #fff;
     box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
-    margin: 1em auto;
+    margin: 2em auto;
     width: 90%;
   }
 }
@@ -241,7 +240,7 @@
   background: linear-gradient(to right, #2ebf91, #8360c3) /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */;
 }
 .main .contents .banner .container {
-  padding: 4em;
+  padding: 4em 0;
 }
 .main .contents .banner .container h1,
 .main .contents .banner .container h2 {
