--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -197,6 +197,7 @@
   background-color: #fff;
   box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16), 0 0 0 1px rgba(0,0,0,0.08);
   width: 100%;
+  z-index: 2;
 }
 .navbar .links a {
   color: #222;
