--- a/assets/css/components/reset.styl
+++ b/assets/css/components/reset.styl
@@ -10,6 +10,7 @@
     .header_top .container_fluid, .contents, .main, .navbar 
         display flex
     .header_top .container_fluid, .main
+        flex-direction: column
         @media(min-width: desktop)
             flex-direction row                
     audio, img, footer, video, iframe
