--- a/assets/css/main.styl
+++ b/assets/css/main.styl
@@ -1,6 +1,8 @@
 @import "./components/vars.styl";
 @import "./components/reset.styl";
+@import "./components/buttons.styl";    
 @import "./components/cards.styl";
+@import "./components/customize.styl";
 @import "./components/editor.styl";    
 @import "./components/grids.styl";
 @import "./components/header.styl"; 
