Commit da tarde

--- a/assets/css/components/buttons.styl
+++ b/assets/css/components/buttons.styl
@@ -3,15 +3,23 @@
     border-width 0.02em
     border-radius 3px
     box-shadow fast-shadow
-    color #fff
+    color #fff!important
     display block
+    font-size 0.98em!important
+    font-weight bold
     margin 0.3em 1.6em 
-    padding 0.8em 1em
+    padding 0.8em 1em!important
     &.bt-clean 
         background-color #fff 
         border-color #fff
-        color #333
+        color #333!important
     &.bt-dark 
-        background-color #333
-        border-color #333
+        background-color #323b44
+        border-color #323b44
+    &.bt-pink
+        background-color #f76397
+        border-color #f76397 
+    &.bt-teal
+        background-color #20c997
+        border-color #20c997       
 
