--- a/assets/css/components/sections.styl
+++ b/assets/css/components/sections.styl
@@ -1,5 +1,5 @@
 .main
-    background-color #eee    
+    background-color #eeeeee36   
     @media(min-width: desktop)
         flex-direction row-reverse
     .contents 
