--- a/assets/css/components/cards.styl
+++ b/assets/css/components/cards.styl
@@ -19,4 +19,24 @@
                 margin-top 0.9em
                 width 88%    
                 p 
-                    font-size 1.3em    
+                    font-size 1.3em   
+//Cards dos exemplos de components
+.card-component
+    background-color #fff
+    box-shadow fast-shadow
+    margin-top 0.8em
+    min-height 18em
+    min-width 30% 
+    max-width 40%
+    .card-header, .card-body, .card-footer 
+        margin 0.5em auto 
+        padding 0.34em
+        width 96%
+    .card-header, .card-body, .card-footer 
+        h2, h3, p
+            font-family Arial, Helvetica, sans-serif 
+        h2             
+            font-size 1.9em
+            font-weight 800
+        p 
+            font-size 1em                                    
