--- a/assets/css/components/customize.styl
+++ b/assets/css/components/customize.styl
@@ -3,6 +3,20 @@
     position fixed
     min-width 30%
     max-width 30%
+//cor do body
+.cor_escura
+    background-color #323b44
+    .header_top
+        .logo 
+            h2 
+              color #20c997  
+    .banner
+        background #20c997!important
+    .footer
+        background #fff
+        p
+            color #333!important      
+
     
     
         
