--- a/assets/css/components/reset.styl
+++ b/assets/css/components/reset.styl
@@ -6,7 +6,14 @@
     margin 0
     padding 0
     a, a:hover
-        text-decoration none       
+        text-decoration none 
+    body::-webkit-scrollbar-track,
+        background-color #F4F4F4    
+    body::-webkit-scrollbar
+        width 6px
+        background #F4F4F4    
+    body::-webkit-scrollbar-thumb
+        background #dad7d7    
     .header_top .container_fluid, .contents, .main, .navbar 
         display flex
     .header_top .container_fluid, .main
